force-app/main/default/objects/Payment_Plan_Schedule_Details__c/Payment_Plan_Schedule_Details__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Schedule Detail</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payment Plan Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Schedule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>