force-app/main/default/objects/Payment_Plan_Schedule_Details__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>