force-app/main/default/objects/Payment_Plan_Schedule_Details__c/fields/Milestone_Notes__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Notes__c</fullName>
    <label>Milestone Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>