force-app/main/default/objects/Payment_Plan_Schedule_Details__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Payment Plan Schedule Details (Master)</relationshipLabel>
    <relationshipName>Payment_Plan_Schedule_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>