force-app/main/default/objects/Payment_Plan_Schedule_Details__c/fields/Payment_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Name__c</fullName>
    <formula>Payment_Plannew__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This Field Display Name of Payment Plan.</inlineHelpText>
    <label>Payment Plan Name</label>
    <type>Text</type>
</CustomField>