force-app/main/default/objects/Payment_Plan_Schedule_Details__c/fields/Payment_Plannew__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plannew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Payment Plan Schedule Details (Lookup)</relationshipLabel>
    <relationshipName>Payment_Plan_Schedule_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>