force-app/main/default/objects/Payment_Plan_Schedule_Details__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1st Installment</fullName>
            </value>
            <value>
                <fullName>2nd Installment</fullName>
            </value>
            <value>
                <fullName>3rd Installment</fullName>
            </value>
            <value>
                <fullName>4th Installment</fullName>
            </value>
            <value>
                <fullName>5th Installment</fullName>
            </value>
            <value>
                <fullName>6th Installment</fullName>
            </value>
            <value>
                <fullName>7th Installment</fullName>
            </value>
            <value>
                <fullName>8th Installment</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>DLD Fees</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>